--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  Hello world
+  <div id="sakums">
+<h1 id="virsraksts">Scanify</h1>
+  <h2>Scan and match!</h2>
+    </div>
   <script src="script.js"></script>
 </body>
 
