--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
 <body>
   <div id="sakums">
 <h1 id="virsraksts">Scanify</h1>
-  <h2>Scan and match!</h2>
+  <h2 id="moto">Scan and match!</h2>
+  <ul id="navigacija">
+    <li>Sūdzības</li>
+    <li>Sākums</li>
+    <li>Piedāvājums</li>
+    <li>Par mums</li>
+    <li>Galerija</li>
+    <li>Kontakti</li>
+    <li>Es</li>
+  </ul>
+    <div id="kkk">
+      <p>1</p>
+      <p>1</p>
     </div>
+    </div>
+
+  
+ 
   <script src="script.js"></script>
 </body>
 
