Gandrīz pabeidzu pirmo lapu (sākumu)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
   <div id="sakums">
+    <div>
 <h1 id="virsraksts">Scanify</h1>
   <h2 id="moto">Scan and match!</h2>
+    </div>
+    <div>
   <ul id="navigacija">
     <li>Sūdzības</li>
     <li>Sākums</li>
@@ -21,11 +24,18 @@
     <li>Kontakti</li>
     <li>Es</li>
   </ul>
-    <div id="kkk">
-      <p>1</p>
-      <p>1</p>
     </div>
+  </div>
+    <div id="gaisirozais">
+      <div>
+        <h2 id=sakums-main>Sākums</h2>
     </div>
+      <div id="flex">
+        <div id="foto">
+          <img src="logo.png">
+            </div>
+    </div>
+  
 
   
  
