Pabeidzu pirmo, otro un trešo lapu, sāku ceturto

--- a/parmums.html
+++ b/parmums.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="parmums.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,14 +15,8 @@
   <h2 id="moto">Scan and match!</h2>
     </div>
     <div>
-  <ul id="navigacija">
-    <li>Sūdzības</li>
+  <ul id="navigacija"> 
     <li>Sākums</li>
-    <li>Piedāvājums</li>
-    <li>Par mums</li>
-    <li>Galerija</li>
-    <li>Kontakti</li>
-    <li>Es</li>
   </ul>
     </div>
   </div>
@@ -31,20 +25,19 @@
         <img src="logo.png" width="500" height="">
           </div>
       <div id="temp">
-        <h2 id=sakums-main>Sākums</h2>
-        
-   
-        <p id="teksts"> - Vai jums kādreiz ir bijušas problēmas atrast pareizo toni savas ādas, lai piemērot nepieciešamo tonālā krēma krāsu?</p>
-        <p id="teksts2"> Mums, komandai “Scanify” ir risinājums! </p>
+        <h2 id=sakums-main>Par mums</h2>
+
+
+        <p id="teksts"> Uzņēmums "Scanify" specializējas ādas toņa noteikšanas tehnoloģiju izstrādē. Mūsu produkts ļauj precīzi un ātri noteikt cilvēka ādas toni, izmantojot skenēšanas tehnoloģijas, un pieskaņot pareziajam tonālajam krēmam. Šī tehnoloģija tiek izmantota gan kosmetoloģijā, gan citās nozarēs. </p>
         </div>
       <div id="flex">
 
-        
-    </div>
-  
 
-  
- 
+    </div>
+
+
+
+
   <script src="script.js"></script>
 </body>
 
