Veidoju pēdējo lapu, vēl tikai galerija

--- a/galerija.html
+++ b/galerija.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="piedavajums.css" rel="stylesheet" type="text/css" />
+  <link href="kontakti.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -20,9 +20,8 @@
   </ul>
     </div>
   </div>
-   
-
-  <script src="script.js"></script>
-</body>
-
-</html>
+  <div id="container">
+    <div id="galerija1">
+      <img src="image.png">
+ 
+  </div>
